# logilinux

./: Makefile  README.md  gif_player  gif_player.cpp  hid_monitor  hid_monitor.cpp  lcd_display  lcd_display.cpp  tictactoe  tictactoe.cpp  tictactoe_lcd  tictactoe_lcd.cpp
examples/: CMakeLists.txt  gif-test.cpp
lib/: CMakeLists.txt
lib/src/devices/: mx_keypad_device.cpp  mx_keypad_device.h
lib/src/util/: gif_decoder.cpp  gif_decoder.h
